--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "10.4.20",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
+    "delay": "^6.0.0",
     "easymde": "^2.18.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
@@ -28,6 +29,7 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "tailwindcss": "3.4.12",
     "typescript": "5.6.2",
