--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.3.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
@@ -24,6 +25,7 @@
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
     "next": "14.2.13",
+    "next-auth": "^4.24.8",
     "postcss": "8.4.47",
     "prisma": "^5.3.1",
     "react": "18.3.1",
