--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.3.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/themes": "^1.1.2",
+    "@tanstack/react-query": "^4.35.3",
     "@types/node": "22.5.5",
     "@types/react": "18.3.8",
     "@types/react-dom": "18.3.0",
