--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "easymde": "^2.18.0",
     "eslint": "8.57.1",
     "eslint-config-next": "14.2.13",
-    "next": "14.2.13",
+    "next": "^13.4.19",
     "next-auth": "^4.24.8",
     "postcss": "8.4.47",
     "prisma": "^5.3.1",
