--- a/package.json
+++ b/package.json
@@ -15,22 +15,22 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/themes": "^1.1.2",
     "@tanstack/react-query": "^4.35.3",
-    "@types/node": "22.5.5",
-    "@types/react": "18.3.8",
-    "@types/react-dom": "18.3.0",
-    "autoprefixer": "10.4.20",
+    "@types/node": "20.6.2",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
     "classnames": "^2.3.2",
     "delay": "^6.0.0",
     "easymde": "^2.18.0",
-    "eslint": "8.57.1",
-    "eslint-config-next": "14.2.13",
-    "next": "^13.4.19",
-    "next-auth": "^4.24.8",
-    "postcss": "8.4.47",
+    "eslint": "8.49.0",
+    "eslint-config-next": "13.4.19",
+    "next": "13.4.19",
+    "next-auth": "^4.23.1",
+    "postcss": "8.4.29",
     "prisma": "^5.3.1",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
@@ -38,8 +38,8 @@
     "react-markdown": "^8.0.7",
     "react-simplemde-editor": "^5.2.0",
     "recharts": "^2.8.0",
-    "tailwindcss": "3.4.12",
-    "typescript": "5.6.2",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2",
     "zod": "^3.22.2"
   },
   "devDependencies": {
